@@ -3,6 +3,7 @@
     * Improve "Clean up unused kernels". Display Linux kernel size.
     * Add "Remove auto-removable packages" feature.
     * Add text to explain cache dropping operation.
+    * Show traceback in window, rather than in terminal.
 
 2010-05-16 Devil Wang <wxjeacen.gmail.com>
 
